# pagmoSharp

./: .gitignore  .gitmodules  CONTRIBUTING.md  Pagmo.NET.sln  README.md  RELEASE_NOTES.md  ROADMAP.md  THIRD_PARTY_LICENSES.md  copyout.txt  createSwigWrappersAndPlaceThem.bat  createSwigWrappersAndPlaceThem.ps1  golomb_ruler.i  pagmoSharp.sln
.ai/: AGENT.md  API_NAMING_POLICY.md  CODE_REVIEW.md  LINUX_TESTING_HANDOFF.md  RELEASE_CHECKLIST.md  ROADMAP.md  SIZE_T_STRATEGY.md
.claude/: settings.local.json
.github/workflows/: build.yml  release.yml
Examples/Examples.Pagmo.NET/: Examples.Pagmo.NET.csproj  Program.cs  README.md
Examples/Examples.PagmoSharp/: Examples.PagmoSharp.csproj  Program.cs  README.md
Pagmo.NET/: Pagmo.NET.csproj
Pagmo.NET/Properties/: launchSettings.json
Pagmo.NET/pagmoExtensions/: NativeInterop.cs  OptionalSolverAvailability.cs  archipelago.cs  r_policy.cs  s_policy.cs  topology.cs
Pagmo.NET/pygmoWrappers/: AlgorithmCallback.cs  BeeColonyLogLineVector.cs  CmaesLogEntry.cs  CmaesLogEntryVector.cs  CompassSearchLogEntryVector.cs  CstrsLogEntry.cs  De1220LogEntryVector.cs  DeLogEntryVector.cs  DecompositionWeights.cs  DoubleVector.cs  EvolveStatus.cs  FNDSResult.cs  GacoLogEntry.cs  GacoLogEntryVector.cs  GwoLogEntryVector.cs  HvAlgorithmSharedPtr.cs  IndividualsGroup.cs  IpoptLogEntry.cs  ManagedAlgorithm.cs  ManagedSPolicy.cs  MbhLogEntry.cs  MbhLogEntryVector.cs  MigrationEntryVector.cs  MoVectorLogEntryVector.cs  MoeadLogEntry.cs  NloptLogEntry.cs  NloptLogEntryVector.cs  PsoLogEntry.cs  SPolicyCallback.cs  SWIGTYPE_p_nlopt_result.cs  SadeLogEntry.cs  SgaLogEntry.cs  SizeTVector.cs  TopologyConnections.cs  UIntVector.cs  VectorOfVectorOfDoubles.cs  VectorOfVectorOfIndices.cs  ackley.cs  archipelago.cs  cec2006.cs  (+26 more)
Tests/Tests.Pagmo.NET/: Test_archipelago.cs  Test_archipelago_algorithm_interop_matrix.cs  Test_archipelago_managed_policies.cs  Test_base_build_verification.cs  Test_bfe.cs  Test_core_facade_null_contracts.cs  Test_double_vector.cs  Test_island.cs  Test_island_managed_policies.cs  Test_managed_problem_callback_lifetime.cs  Test_migration_entry.cs  Test_policy_ownership.cs  Test_release_build_verification.cs  Test_threadIsland.cs  Tests.Pagmo.NET.csproj
Tests/Tests.PagmoSharp/: TestAlgorithmBase.cs  TestArchipelago.cs  TestBfe.cs  TestDe.cs  TestGaco.cs  TestR_policy.cs  TestThreadIsland.cs  TestTopology.cs  TestUntestableItems.cs  Test_archipelago.cs  Test_archipelago_algorithm_interop_matrix.cs  Test_archipelago_managed_policies.cs  Test_bfe.cs  Test_core_facade_null_contracts.cs  Test_island.cs  Test_island_managed_policies.cs  Test_managed_problem_callback_lifetime.cs  Test_policy_ownership.cs  Test_r_policy.cs  Test_threadIsland.cs  Tests.PagmoSharp.csproj
docs/: README.md  algorithm-selection.md  api-reference.md  archipelago-topology-policies.md  getting-started.md  nuget-readme.md
docs/releases/: 1.0.0-beta.1.md
java/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
java/core/: build.gradle.kts
java/examples/: README.md  build.gradle.kts
java/kotlin-ext/: build.gradle.kts
java/pagmoWrapper/: CMakeLists.txt
java/scripts/: build-native.ps1  regen-swig.ps1
java/swig/: Pagmo4jSwigInterface.i
oldFiles/: FitnessCallback.h  GeneratedWrappers.h  PagmoProblem.cpp  PagmoProblem.h  PagmoProblemExterns.cpp  PagmoProblemExterns.h  SampleProblem.h  gacoExterns.cpp  gacoExterns.h  pagmo.cpp  pagmo.lib  problem.cpp  problemWrapper.cpp
pagmoSharp/: IAlgorithm.cs  ProblemExtensions.cs  pagmoSharp.csproj  problemManualFunctions.cs
pagmoSharp/Properties/: launchSettings.json
pagmoSharp/pagmoExtensions/: DoubleVector.cs  NativeInterop.cs  Types.cs  archipelago.cs  gaco.cs  island.cs  population.cs  problem.cs  r_policy.cs  s_policy.cs  topology.cs
pagmoSharp/pygmoWrappers/: BeeColonyLogLine.cs  CompassSearchLogEntry.cs  CstrsLogEntryVector.cs  De1220LogEntry.cs  DeLogEntry.cs  DecompositionWeights.cs  DoubleVector.cs  FNDSResult.cs  Fnds_Return_Type.cs  GwoLogEntry.cs  IhsLogEntry.cs  IhsLogEntryVector.cs  IndividualsGroupVector.cs  IpoptLogEntryVector.cs  ManagedProblem.cs  ManagedRPolicy.cs  MigrantHandling.cs  MigrationEntry.cs  MigrationType.cs  MoVectorLogEntry.cs  MoeadLogEntryVector.cs  NullProblemCallback.cs  PairOfDoubleVectors.cs  ProblemCallback.cs  PsoLogEntryVector.cs  RPolicyCallback.cs  RekSum.cs  SWIGTYPE_p_Ipopt__ApplicationReturnStatus.cs  SWIGTYPE_p_Ipopt__Index.cs  SWIGTYPE_p_boost__indirect_iteratorT_pagmo__archipelago__container_t__iterator_t.cs  SWIGTYPE_p_double.cs  SWIGTYPE_p_evolve_status.cs  SWIGTYPE_p_migrant_handling.cs  SWIGTYPE_p_migration_type.cs  SWIGTYPE_p_nlopt_result.cs  SWIGTYPE_p_pagmo__bfe.cs  SWIGTYPE_p_pagmo__individuals_group_t.cs  SWIGTYPE_p_pagmo__problem.cs  SWIGTYPE_p_pagmo__topology.cs  SWIGTYPE_p_std__mapT_std__string_Ipopt__Index_std__lessT_std__string_t_t.cs  (+144 more)
pagmoWrapper/: AndH.cpp  CMakeLists.txt  GeneratedWrappers.cxx  PagmoProblemExterns.cpp  PagmoProblemExterns.h  algorithm_callback.h  algorithm_log_projections_more.h  archipelago_swig.h  bfe.h  cmaes_log_projection.h  cstrs_log_projection.h  de_log_projection.h  gaco_log_projection.h  gradientsAndHessiansCallback.h  ihs_log_projection.h  island_swig.h  managed_bridge.cpp  mbh_log_projection.h  multi_objective.cpp  multi_objective.h  nloptGenerated.cxx  pagmoSharpSwigInterface_wrap.h  pagmoWrapper.vcxproj  pagmoWrapper.vcxproj.filters  problem.cpp  problem.h  r_policy.cpp  r_policy.h  r_policyBase.cpp  r_policyBase.h  s_policy.cpp  s_policy.h  tuple_adapters.h  vec_of_vec.h
ports/coin-or-ipopt/: portfile.cmake
ports/pagmo2/: vcpkg.json  (+1 more)
scripts/: build-native.ps1  build-release-artifacts.ps1  check-generated-api-docs.ps1  check-handwritten-api-docs.ps1  docs-smoke.ps1  generate-api-reference.ps1  normalize-endings.ps1  regen-swig.ps1  release-gates.ps1  test.ps1
swig/: Pagmo4jSwigInterface.i  PagmoNETSwigInterface.i  pagmoSharpSwigInterface.i  shared_core.i
swigInterfaceFileAndPagmoHeaders/: pagmoSharpSwigInterface.i
triplets/: x64-linux-static-pic.cmake  x64-windows-static-md.cmake
(+519 files in other folders)
